--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -263,6 +263,7 @@ on post-fs-data
 
     # Create directory used by media clients
     mkdir /data/vendor/media 0770 mediacodec media
+    mkdir /data/vendor/mediadrm 0770 media mediadrm
 
     # create QDMA dropbox
     mkdir /data/vendor/qdmastats 0700 system system
